# UCF-protocol

./: .gitignore  CHANGELOG.md  COMPATIBILITY.md  Cargo.toml  README.md  build.rs
docs/: assets.md  biophys_assets.md  breaking_changes_policy.md  crypto_profile.md  determinism_rules.md  digests.md  experience_stream.md  geist.md  human.md  microcircuit.md  milestones.md  pinning_guide.md  protocol_versioning.md  reason_codes.md  release_process.md  sep.md  tooling.md  windowing.md
examples/: gen_experience_fixtures.rs  generate_frames.rs  generate_mc_cfg_hpa_bin.rs  generate_new_fixtures.rs  generate_vectors.rs
src/: lib.rs
tests/: determinism.rs
testvectors/: README.md  aap_with_recovery.digest  aap_with_recovery.hex  approval_artifact_package.digest  approval_artifact_package.hex  approval_decision.digest  approval_decision.hex  asset_digest_morphology_v1.digest  asset_digest_morphology_v1.hex  asset_manifest_v1.digest  asset_manifest_v1.hex  biophys_channel_params_set_v1.digest  biophys_channel_params_set_v1.hex  biophys_connectivity_graph_v1.digest  biophys_connectivity_graph_v1.hex  biophys_morphology_set_v1.digest  biophys_morphology_set_v1.hex  biophys_synapse_params_set_v1.digest  biophys_synapse_params_set_v1.hex  canonical_intent_query.digest  canonical_intent_query.hex  completeness_report.digest  completeness_report.hex  consistency_feedback_high.digest  consistency_feedback_high.hex  consistency_feedback_low.digest  consistency_feedback_low.hex  consistency_feedback_low_flags.digest  consistency_feedback_low_flags.hex  control_frame_m1_overlays_on.hex  (+54 more)
(+24 files in other folders)
